Fixed: Bug 53824 - [onboarding] unable to collapse 'Manual Configuration' section
Root cause: based on refactoring the “config” class wasn’t handle like before
Solution: add toggle behaviour for “config” again
Resolved state: Fix
Version: 7.10.0
Git repository: wd/frontend/web
Git branch: develop
Package name: open-xchange-appsuite

--- a/ui/apps/io.ox/onboarding/clients/style.less
+++ b/ui/apps/io.ox/onboarding/clients/style.less
@@ -23,6 +23,7 @@
 
 .mixin-expanded {
     .content { display: block; }
+    .config { display: flex; }
     .fa-chevron-right { display: none; }
     .fa-chevron-down { display: inline-block; }
 }
@@ -61,7 +62,7 @@
         margin: 0;
         &.config {
             font-size: 14px;
-            display: flex;
+            display: none;
             .title, .property, .value { padding: 4px 8px 0 0; }
             .title {
                 font-style: italic;
